# GrizzlyBear-Engine-Public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  guidlines.txt  packages.txt  premake5.lua  scope.md
GrizzlyCore/: CMakeLists.txt
GrizzlyCore/src/: GrizzlyBear.h  gbpch.h
GrizzlyCore/src/GrizzlyBear/API/: Window.cpp
GrizzlyCore/src/GrizzlyBear/API/GGL/: Buffer.h  GraphicsContext.h  KeyCodes.h  Shader.h  Texture.h
GrizzlyCore/src/GrizzlyBear/API/OpenGL/: OpenGLBase.cpp  OpenGLBase.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLStatistics.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLWindow.cpp  OpenGLWindow.h
GrizzlyCore/src/GrizzlyBear/Addon/: ImGuiAddon.cpp  ImGuiAddon.h
GrizzlyCore/src/GrizzlyBear/Asset/: AssetDataSpecific.h  AssetLoader.cpp  AssetManager.cpp
GrizzlyCore/src/GrizzlyBear/Core/: Application.cpp  Application.h  BaseDefines.h  Executor.cpp  Executor.h  FileIO.cpp  FileIO.h  Log.cpp  Log.h  Thread.cpp  Thread.h
GrizzlyCore/src/GrizzlyBear/Core/Platform/: Platform.cpp  Platform.h
GrizzlyCore/src/GrizzlyBear/Core/Platform/Other/: Ansicodes.cpp  Ansicodes.h
GrizzlyCore/src/GrizzlyBear/Core/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
GrizzlyCore/src/GrizzlyBear/Core/Reflection/: Reflector.h  TypeUtils.h
GrizzlyCore/src/GrizzlyBear/Environment/: ChunkFetcher.h  Environment.cpp  Environment.h  FileTree.h  Gcff.cpp  Gcff.h  PlainFetcher.cpp  PlainFetcher.h  VirtualFetcher.cpp
GrizzlyCore/src/GrizzlyBear/Misc/: CmdLineParser.cpp  CmdLineParser.h  RenderUtils.h  Utils.h
GrizzlyCore/src/GrizzlyBear/ParticleSystem/: ParticleSystem2D.cpp  ParticleSystem2D.h
GrizzlyCore/src/GrizzlyBear/Phys75/: Phys75.cpp
GrizzlyCore/src/GrizzlyBear/Renderer/: Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h
GrizzlyCore/src/GrizzlyBear/Renderer/Systems/: Animator2D.cpp  Animator2D.h  AnimatorWidget.h
GrizzlyCore/src/GrizzlyBear/Scene/: EntityManager.h  Scene.cpp  Scene.h  SerializeUtils.h  VFXManager.h
GrizzlyCore/src/GrizzlyBear/Scene/Components/: CameraComponent.h  MeshComponent.h  ScriptComponent.h  TransformationComponent.h  WidgetComponent.h
GrizzlyCore/src/GrizzlyBear/Script/: LuaScript.cpp  LuaScript.h  ScriptManager.cpp  ScriptManager.h
GrizzlyCore/src/GrizzlyBear/Script/Native/: Entity.cpp  Entity.h
GrizzlyCore/src/GrizzlyBear/Shader/: ShaderBuilder.cpp  ShaderBuilder.h
GrizzlyCore/src/GrizzlyBear/Template/: GuiCamera.cpp  GuiCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  Overlay.cpp  PerspectiveCamera.cpp  SceneManager.cpp  SceneManager.h  TemplateBase.h
GrizzlyCore/src/GrizzlyBear/Terminal/: Terminal.cpp  Terminal.h
GrizzlyEditor/: error_level.gcs  layout.ini  prototype_level.gcs  (+2 more)
GrizzlyRuntime/: CMakeLists.txt
GrizzlyRuntime/src/: TestApp.cpp
(+175 files in other folders)
